# dash-mantine-template

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  .pyway.conf  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  samconfig.toml
migrations/: V1_1__create_users_table.sql  V2_1__add_email_column.sql
src/: .env_template  main.py
src/dash_mantine_template/: __init__.py  config.py  context.py
src/dash_mantine_template/assets/: __init__.py  dark.css  light.css  style.css
src/dash_mantine_template/component_ids/: __init__.py
src/dash_mantine_template/component_ids/charts/: __init__.py
src/dash_mantine_template/component_ids/containers/: DummyOutputs.py  __init__.py
src/dash_mantine_template/component_ids/filters/: __init__.py  select_component.py
src/dash_mantine_template/component_ids/forms/: __init__.py
src/dash_mantine_template/component_ids/miscellaneous/: ThemeSwitch.py  __init__.py
src/dash_mantine_template/components/: __init__.py
src/dash_mantine_template/pages/: __init__.py  analytics.py  components.py  home.py
src/dash_mantine_template/utils/: CreateApp.py  __init__.py
tests/: .test_env  conftest.py  test_main.py
tests/components/filters/: test__radio_button.py
tests/components/utils/: test__QueryBuilder.py
tests/pages/: __init__.py  test__analytics.py  test__home.py
tests/utils/: test__CreateApp.py
tests/utils/database/: test__SqlAlchemy.py
tests/utils/layout/: test__Layout.py
tests/utils/logging_/: __init__.py  test__Logger.py
(+123 files in other folders)
