[project]
name = "dash-mantine-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Milan Mitrovic", email = "milanmitrovic1991@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.0.0",
    "deepdiff>=8.5.0",
    "insecure-package>=0.1.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pip-audit>=2.9.0",
    "pydantic>=2.10.6",
    "pyway>=0.3.32",
    "quantlib>=1.38",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.61",
    "dotenv"
]

[project.scripts]
dash-mantine-template = "dash_mantine_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 88
